// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`source remove should ignore remove if threshold is too low 1`] = `
Array [
  Object {
    "commonID": "test1",
    "data": Object {},
    "date": 1970-01-01T00:00:00.000Z,
    "id": "test1",
    "sequentialID": 1,
  },
  Object {
    "commonID": "test2",
    "data": Object {},
    "date": 1970-01-01T00:00:00.000Z,
    "id": "test2",
    "sequentialID": 2,
  },
  Object {
    "commonID": "test3",
    "data": Object {},
    "date": 1970-01-01T00:00:00.000Z,
    "id": "test3",
    "sequentialID": 3,
  },
]
`;

exports[`source remove should remove if threshold is high enough 1`] = `
Array [
  Object {
    "commonID": "test1",
    "data": Object {},
    "date": 1970-01-01T00:00:00.000Z,
    "id": "test1",
    "sequentialID": 1,
  },
  Object {
    "commonID": "test2",
    "data": null,
    "id": "test2",
    "sequentialID": 4,
  },
  Object {
    "commonID": "test3",
    "data": Object {},
    "date": 1970-01-01T00:00:00.000Z,
    "id": "test3",
    "sequentialID": 3,
  },
]
`;

exports[`source remove should remove when driver returns a set 1`] = `
Array [
  Object {
    "commonID": "test1",
    "data": Object {},
    "date": 1970-01-01T00:00:00.000Z,
    "id": "test1",
    "sequentialID": 1,
  },
  Object {
    "commonID": "test2",
    "data": null,
    "id": "test2",
    "sequentialID": 4,
  },
  Object {
    "commonID": "test3",
    "data": Object {},
    "date": 1970-01-01T00:00:00.000Z,
    "id": "test3",
    "sequentialID": 3,
  },
]
`;
